Modifications sur les icônes et h2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 <!-- Filtres -->
         <div class="filters">
-            <h3 class="title-h2">Filtres</h3>
+            <h2 id="title-h2">Filtres</h2>
             <ul class="filters-ul">
                 <li class="filters-button"><i class="fas fa-money-bill-wave icon-filter"></i>Économique</li>
                 <li class="filters-button"><i class="fas fa-child icon-filter"></i>Familial</li>
@@ -60,7 +60,7 @@
 
 
 <!-- Section 3 Accommodation -->
-    <section class="blocs" id="blocs">
+    <section class="blocs">
         <div class="bloc bloc-accomodation">
             <h2 class="title-h2 push-to-right">Hébergement à Marseille</h2>
             <div class="marseille-cases">
@@ -73,11 +73,11 @@
                             <h3 class="hotel-name">Auberge la Cannebière</h3>
                             <p class="hotel-price">Nuit à partir de 25€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>
@@ -91,11 +91,11 @@
                             <h3 class="hotel-name">Hôtel du Port</h3>
                             <p class="hotel-price">Nuit à partir de 52€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
                             </div>
                         </div>   
                     </div>   
@@ -109,11 +109,11 @@
                             <h3 class="hotel-name">Hôtel les Mouettes</h3>
                             <p class="hotel-price">Nuit à partir de 76€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>
@@ -127,11 +127,11 @@
                             <h3 class="hotel-name">Auberge de la Mer</h3>
                             <p class="hotel-price">Nuit à partir de 46€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>     
@@ -145,15 +145,15 @@
                             <h3 class="hotel-name">Auberge le Panier</h3>
                             <p class="hotel-price">Nuit à partir de 23€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>  
-                </a>    
+                </a>
                 <a href="#">
                     <div class="marseille-case">
                         <div class="marseille-case-img" id="room6">
@@ -163,11 +163,11 @@
                             <h3 class="hotel-name">Hôtel chez Amina</h3>
                             <p class="hotel-price">Nuit à partir de 96€</p>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
                             </div>
                         </div>
                     </div>    
@@ -192,11 +192,11 @@
                                 <p class="hotel-price">Nuit à partir de 128€</p>
                             </div>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
                             </div>
                         </div>
                     </div>
@@ -212,11 +212,11 @@
                                 <p class="hotel-price">Nuit à partir de 71€</p>
                             </div>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>
@@ -232,11 +232,11 @@
                                 <p class="hotel-price">Nuit à partir de 68€</p>
                             </div>
                             <div class="stars">
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStars"></div>
-                                <div class="fas fa-star iconStarsEmpty"></div>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStars"></i>
+                                <i class="fas fa-star iconStarsEmpty"></i>
                             </div>
                         </div>
                     </div>
